<resources>
    <string name="app_name">Tic Tac Toe</string>

    <string name="AppTitle">Tic Tac Toe</string>
    <string name="PlayButton">Play</string>

    <string name="PlayerSetup">Enter Your Name</string>
    <string name="Label1">Player1</string>
    <string name="Label2">Player2</string>
    <string name="SubmitButton">Submit Players</string>
    <string name="NameHint">Enter Your Name</string>
</resources>